--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "livePreview.defaultPreviewPath": "/vegefoods-master/index.html"
+    "livePreview.defaultPreviewPath": "/vegefoods-master/index.html",
+    "liveServer.settings.port": 5501
 }
